Remove unused template code
